Consistency changes, the semicolon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>Press the button to generate an idea:</p>
             <h2 id="activity-name" class="activity-name" aria-live="polite">Activity will appear here</h2>
         </main>
-        <button id="generate-activity" class="generate-activity" aria-label="Find a new activity">Generate activity</button>
+        <button id="generate-activity" class="generate-activity" aria-label="0 a new activity">Generate activity</button>
         <script src="index.js"></script>
     </body>
 </html>
